changed some api , now it should be fine
