# doc/api.yaml
@@ -58,6 +58,7 @@ paths:
           content:  
             application/json:
               schema:
+                description: session ID
                 type: object
                 properties:
                   token:
@@ -75,18 +76,22 @@ paths:
           operationId: getMyStream
           responses:
             "200":
-              description: "user Home page loaded correcttly"
+              description: "user Home page loaded correctly"
               content:
                 application/json:
                   schema:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        photo:
-                          $ref: '#/components/schemas/Photo'
-                    maxItems: 1024
-                    minItems: 0
+                    description: user home page
+                    type: object
+                    properties:
+                      photos:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            photo:
+                              $ref: '#/components/schemas/Photo'
+                        maxItems: 1024
+                        minItems: 0
   /users:
     get:
        tags: ["User"]
@@ -111,36 +116,21 @@ paths:
           content:  
               application/json:
                 schema:
-                  type: array
-                  items: 
-                    type: string
-                    pattern: "^[a-zA-Z0-9_]*$"
-                    minLength: 3
-                    maxLength: 64
-                  minItems: 0  
-                  maxItems: 1024
-                  example: 
-                    -"Maria"
-                    -"John"
-  /users/{username}:
-    get:
-      tags: ["User"]
-      summary: "Get user information"
-      description: |-
-        returns back a j-son file object containing all the information
-        related to that user Id
-      operationId: getUserProfile
-      parameters:
-        - $ref: '#/components/parameters/username'
-
-      responses:
-        "200":
-          description: 
-            "user correctly retrieved "
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
+                  description: users list
+                  type: object
+                  properties:
+                    users:
+                      type: array
+                      items:
+                        type: string
+                        pattern: "^[a-zA-Z0-9_]*$"
+                        minLength: 3
+                        maxLength: 64
+                      minItems: 0  
+                      maxItems: 1024
+                      example: 
+                        -"Maria"
+                        -"John"
   /users/{username}/options:
     put:
       parameters:
@@ -243,6 +233,7 @@ paths:
           content:
             application/json:
               schema:
+                description: "the id of the picture"
                 type: string
                 pattern: "^[a-z0-9_]*$"
                 minLength: 1
@@ -264,6 +255,7 @@ paths:
           content:
             application/json:
               schema:
+                description: "the photo object"
                 $ref: '#/components/schemas/Photo'
         "404":
           description: "photo not found"
@@ -289,7 +281,7 @@ paths:
         responses:
           "204":
             description: "like deleted correctly"
-    put:
+    post:
       tags: ["Photos"]
       summary: "like a picture"
       description: "takes the Id of a Picture , the ID of the logged in user , and adds a like to it"
@@ -331,6 +323,7 @@ paths:
             content:
               application/json:
                 schema:
+                  description:  "the comment id of that comment "
                   type: integer
                   example: 10
   /users/{username}/Photos/{photoid}/comments/{commentid}:
@@ -396,7 +389,7 @@ components:
   schemas:
     User:
       description:  "user object"
-      type: object
+      type: objectz
       properties:
           followers:
             description: "followers of a user"
@@ -456,10 +449,7 @@ components:
               /afLwCw8tnQbqYAPsgxE1S6F3EAIXux2oQFKm0ihMsOF71dHYx+f3NND68ghCu1YIoePPQN1pGRABkJ6Bus96CutRZMydTl+TvuiRW1m3n0eDl0vRPcEysqdXn+jsQPsrHMquGeXEaY4Yk4wxWcY5V
               /9scqOMOVUFthatyTy8QyqwZ+kDURKoMWxNKr2EeqVKcTNOajqKoBgOE28U4tdQl5p5bwCw7BWquaZSzAPlwjlithJtp3pTImSqQRrb2Z8PHGigD4RZuNX6JYj6wj7O4TFLbCO/Mn/m8R+h6rYSUb3ekokRY6f/YukArN979jcW+V
               /S8g0eT/N3VN3kTqWbQ428m9/8k0P/1aIhF36PccEl6EhOcAUCrXKZXXWS3XKd2vc/TRBG9O5ELC17MmWubD2nKhUKZa26Ba2+D3P+4/MNCFwg59oWVeYhkzgN/JDR8deKBoD7Y+ljEjGZ0sosXVTvbc6RHirr2reNy1OXd6pJsQ+gqjk8VWFYmHrwBzW/n+uMPFiRwHB2I7ih8ciHFxIkd/3Omk5tCDV1t+2nNu5sxxpDFNx+huNhVT3
-              /zMDz8usXC3ddaHBj1GHj/As08fwTS7Kt1HBTmyN29vdwAw+/wbwLVOJ3uAD1wi/dUH7Qei66PfyuRj4Ik9is+hglfbkbfR3cnZm7chlUWLdwmprtCohX4HUtlOcQjLYCu+fzGJH2QRKvP3UNz8bWk1qMxjGTOMThZ3kvgLI5AzFfo379UAAAAASUVORK5CYII="
- 
-
-          
+              /zMDz8usXC3ddaHBj1GHj/As08fwTS7Kt1HBTmyN29vdwAw+/wbwLVOJ3uAD1wi/dUH7Qei66PfyuRj4Ik9is+hglfbkbfR3cnZm7chlUWLdwmprtCohX4HUtlOcQjLYCu+fzGJH2QRKvP3UNz8bWk1qMxjGTOMThZ3kvgLI5AzFfo379UAAAAASUVORK5CYII="          
         id:
           description: "id of a photo"
           type: string
