# service/api/api-handler.go
@@ -10,7 +10,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/home", rt.wrap(rt.getHome))
 	rt.router.GET("/users", rt.wrap(rt.getUsers))
 	rt.router.GET("/users/:username", rt.wrap(rt.getUser))
-	rt.router.POST("/users/:username/options", rt.wrap(rt.postUserOptions))
+	rt.router.PUT("/users/:username/options", rt.wrap(rt.postUserOptions))
 	rt.router.POST("/users/:username/following/:otherusername", rt.wrap(rt.postUserFollowing))
 	rt.router.DELETE("/users/:username/following/:otherusername", rt.wrap(rt.deleteUserFollowing))
 	rt.router.POST("/users/:username/banned/:otherusername", rt.wrap(rt.postUserBanned))
@@ -20,7 +20,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users/:username/Photos", rt.wrap(rt.getUserPhotos))
 	rt.router.DELETE("/users/:username/Photos/:photoid", rt.wrap(rt.DeleteUserPhoto))
 	rt.router.GET("/users/:username/Photos/:photoid", rt.wrap(rt.GetUserPhoto))
-	rt.router.PUT("/users/:username/Photos/:photoid/likes", rt.wrap(rt.putUserPhotosLikes))
+	rt.router.POST("/users/:username/Photos/:photoid/likes", rt.wrap(rt.putUserPhotosLikes))
 	rt.router.DELETE("/users/:username/Photos/:photoid/likes", rt.wrap(rt.deleteUserPhotosLikes))
 	rt.router.POST("/users/:username/Photos/:photoid/comments", rt.wrap(rt.postUserPhotosComments))
 	rt.router.DELETE("/users/:username/Photos/:photoid/comments/:commentid", rt.wrap(rt.deleteUserPhotosComments))
